--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "starship/log",
+    "name": "starshipeeees/log",
     "type": "library",
     "require": {
         "php": ">=7.2",
@@ -7,7 +7,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Starship\\Log\\": "src/"
+            "Starshipeeees\\Log\\": "src/"
         }
     }
 }
