--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": "^7.2",
         "psr/log": "^1.1",
-        "ext-xml": "php-mbstring"
+        "php-mbstring": "*"
     },
     "autoload": {
         "psr-4": {
